modified:   css/styles.css 	modified:   index.html

--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -1,74 +1,76 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Food, LLC</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">    
-  </head>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Restaurant</title>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/styles.css">
+</head>
 <body>
-  <header>
-    <nav id="header-nav" class="navbar navbar-default">
-      <div class="container">
-        <div class="navbar-header">
-          <a href="index.html" class="pull-left visible-md visible-lg">
-            <div id="logo-img" alt="Logo image"></div>
-          </a>
-          <div class="navbar-brand">
-            <a href="index.html"><h1>Food, LLC</h1></a>
-          </div>
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        <div id="collapsable-nav" class="collapse navbar-collapse">
-           <ul id="nav-list" class="nav navbar-nav navbar-right hidden-md hidden-lg hidden-sm">
-            <li>
-              <a href="menu-categories.html">
-                <br class="hidden-xs"> Chicken</a>
-            </li>
-            <li>
-              <a href="#">
-               <br class="hidden-xs">Beef</a>
-            </li>
-            <li>
-              <a href="#">
-                <br class="hidden-xs"> Sushi</a>
-            </li>            
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </header>
+
+<nav class="navbar navbar-default navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Food, LLC</a>
+    </div>
+
+    <div id="collapsable-nav" class="collapse navbar-collapse ">
+      <ul id="nav-list" class="nav navbar-nav navbar-right  hidden-md hidden-sm visible-xs">
+        <li>
+          <a class="text-center" href="#">Chicken</a>
+        </li>
+        <li>
+          <a class="text-center" href="#">Beef</a>
+        </li>
+        <li>
+          <a class="text-center" href="#">Sushi</a>
+        </li>    
+      </ul>
+    <div>
+  </div>
+</nav>
+
 <div class="page-header text-center">
   <h1>Our Menu</h1>
 </div> 
- <div id="main-content" class="container">   
-    <div id="home-tile" class="row">
-      <div class="col-md-3 col-sm-5 col-xs-12 textInDiv">
-        <p id="Chicken">Chicken</p>
-        <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris viverra elementum justo vel tincidunt. Vivamus eget metus quis metus volutpat faucibus. Nulla et ante placerat, vehicula nisl ac, tincidunt nulla. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris viverra elementum justo vel tincidunt. Vivamus eget metus quis metus volutpat faucibus. Nulla et ante placerat, vehicula nisl ac, tincidunt nulla. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris viverra elementum justo vel tincidunt. Vivamus eget metus quis metus volutpat faucibus. Nulla et ante placerat, vehicula nisl ac, tincidunt nulla.
-        </p>
-        </div>
-        <div class="col-md-3 col-sm-5 col-xs-12 textInDiv">        
-        <p id="Beef">Beef</p>
-        <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris viverra elementum justo vel tincidunt. Vivamus eget metus quis metus volutpat faucibus. Nulla et ante placerat, vehicula nisl ac, tincidunt nulla. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris viverra elementum justo vel tincidunt. Vivamus eget metus quis metus volutpat faucibus. Nulla et ante placerat, vehicula nisl ac, tincidunt nulla. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris viverra elementum justo vel tincidunt. Vivamus eget metus quis metus volutpat faucibus. Nulla et ante placerat, vehicula nisl ac, tincidunt nulla.
-        </p>
-        </div>
-        <div class="col-md-3 col-sm-12 col-xs-12 textInDiv">      
-        <p id="Sushi">Sushi</p>
-        <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris viverra elementum justo vel tincidunt. Vivamus eget metus quis metus volutpat faucibus. Nulla et ante placerat, vehicula nisl ac, tincidunt nulla. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris viverra elementum justo vel tincidunt. Vivamus eget metus quis metus volutpat faucibus. Nulla et ante placerat, vehicula nisl ac, tincidunt nulla. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris viverra elementum justo vel tincidunt. Vivamus eget metus quis metus volutpat faucibus. Nulla et ante placerat, vehicula nisl ac, tincidunt nulla.
-        </p>
+
+<div class="container-fluid">
+  <div class="row">
+
+  	<div class="col-xs-12 col-sm-6 col-md-4">
+      <div class="container-text">
+        <div class="header-title">Chicken</div>
+        <p>Chickens or Poultry are domesticated birds kept by humans for the eggs they produce, their meat, their feathers, or sometimes as pets. These birds are most typically members of the superorder Galloanserae (fowl), especially the order Galliformes (which includes chickens, quails and turkeys) and the family Anatidae, in order Anseriformes, commonly known as "waterfowl" and including domestic ducks and domestic geese. Poultry also includes other birds that are killed for their meat, such as the young of pigeons (known as squabs) but does not include similar wild birds hunted for sport or food and known as game. The word "poultry" comes from the French/Norman word poule, itself derived from the Latin word pullus, which means small animal.The domestication of poultry took place several thousand years ago. This may have originally been as a result of people hatching and rearing young birds from eggs collected from the wild, but later involved keeping the birds permanently in captivity. Domesticated chickens may have been used for cockfighting at first and quail kept for their songs, but soon it was realised how useful it was having a captive-bred source of food. Selective breeding for fast growth, egg-laying ability, conformation, plumage and docility took place over the centuries, and modern breeds often look very different from their wild ancestors. Although some birds are still kept in small flocks in extensive systems, most birds available in the market today are reared in intensive commercial enterprises. Poultry is the second most widely eaten type of meat globally and, along with eggs, provides nutritionally beneficial food containing high-quality protein accompanied by a low proportion of fat. All poultry meat should be properly handled and sufficiently cooked in order to reduce the risk of food poisoning. </p>
       </div>
-    </div>
-  </div>  
-  <script src="js/jquery-2.1.4.min.js"></script>
+  	</div>
+
+  	<div class="col-xs-12 col-sm-6 col-md-4">
+      <div class="container-text">
+        <div class="header-title">Beef</div>
+        <p>Beef is the culinary name for meat from bovines, especially cattle. Beef can be harvested from bulls, heifers or steers. Its acceptability as a food source varies in different parts of the world. Beef muscle meat can be cut into roasts, short ribs or steak (filet mignon, sirloin steak, rump steak, rib steak, rib eye steak, hanger steak, etc.) Some cuts are processed (corned beef or beef jerky), and trimmings, usually mixed with meat from older, leaner cattle, are ground, minced or used in sausages. The blood is used in some varieties of blood sausage. Other parts that are eaten include the oxtail, liver, tongue, tripe from the reticulum or rumen, glands (particularly the pancreas and thymus, referred to as sweetbread), the heart, the brain (although forbidden where there is a danger of bovine spongiform encephalopathy, BSE), the kidneys, and the tender testicles of the bull (known in the United States as calf fries, prairie oysters, or Rocky Mountain oysters). Some intestines are cooked and eaten as-is, but are more often cleaned and used as natural sausage casings. The bones are used for making beef stock.Beef from steers and heifers is very similar. According to the most recent National Beef Quality Audit, heifer carcasses had slightly more marbling than steer carcasses, but USDA quality grade was not significantly different.[1] Depending on economics, the number of heifers kept for breeding varies. The meat from older bulls is usually tougher, so it is frequently used for mince (known as ground beef in the American English). Cattle raised for beef may be allowed to roam free on grasslands, or may be confined at some stage in pens as part of a large feeding operation called a feedlot (or concentrated animal feeding operation), where they are usually fed a ration of grain, protein, roughage and a vitamin/mineral preblend.</p>
+      </div> 
+	 </div>
+
+    <div class="col-xs-12 col-sm-12 col-md-4">
+      <div class="container-text">
+        <div class="header-title">Sushi</div>
+        <p>The original type of sushi, known today as nare-zushi (馴れ寿司, 熟寿司,) was first made in Southeast Asia, maybe along what is also known as the Mekong River (reference required). The term sushi comes from an antiquated grammatical form no longer used in other contexts, and literally means "sour-tasting", a reflection of its historic origin as a fermented food. The oldest form of sushi in Japan, narezushi, is still made by wrapping fish in soured fermenting rice, which causes the fish proteins to break down into their constituent amino acids. The fermenting rice and fish have both a sour and an umami taste. Contemporary Japanese sushi has little resemblance to the traditional lacto-fermented rice dish. Originally, when the fermented fish was taken out of the rice, only the fish was consumed while the fermented rice was discarded.[2] The strong-tasting and smelling funazushi, a kind of narezushi made near Lake Biwa in Japan, resembles the traditional fermented dish. Beginning in the Muromachi period (1336–1573) of Japan, vinegar was added to the mixture for better taste and preservation. The vinegar accentuated the rice's sourness and was known to increase its shelf life, allowing the fermentation process to be shortened and eventually abandoned. In the following centuries, sushi in Osaka evolved into oshi-zushi. The seafood and rice were pressed using wooden (usually bamboo) molds. By the mid 18th century, this form of sushi had reached Edo (contemporary Tokyo).The contemporary version, internationally known as "sushi", was created by Hanaya Yohei (1799–1858) at the end of the Edo period in Edo. Sushi invented by Hanaya was an early form of fast food that was not fermented (therefore prepared quickly) and could be conveniently eaten with one's hands. The size of the previous sushi was about three times as large as contemporary ones. Originally, this sushi was known as Edomae zushi because it used freshly caught fish in the Edo-mae (Edo Bay or Tokyo Bay). Though the fish used in modern sushi no longer usually comes from Tokyo Bay, it is still formally known as Edomae nigirizushi.The Oxford English Dictionary notes the earliest written mention of sushi in English in an 1893 book, A Japanese Interior, where it mentions sushi as "a roll of cold rice with fish, sea-weed, or some other flavoring". However, there is also mention of sushi in a Japanese-English dictionary from 1873,[8] and an 1879 article on Japanese cookery in the journal Notes and Queries.</p>
+      </div>  
+	 </div>
+
+  </div>
+ </div>
+
+  <script src="js/jquery-1.12.1.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/script.js"></script>
+
 </body>
 </html>
